# twitterclone

./: README.md  pyproject.toml
authentication/: forms.py  views.py
notification/: models.py  views.py
notification/migrations/: 0001_initial.py  0002_auto_20200902_2035.py
templates/: base.html  generic_form.html  index.html  notification_view.html  tweet.html  user_profile.html
tweet/: forms.py  models.py  views.py
tweet/migrations/: 0001_initial.py  0002_tweet_twitter_user.py
twitterclone/: settings.py  urls.py
twitteruser/: admin.py  forms.py  models.py  views.py
twitteruser/migrations/: 0001_initial.py  0002_remove_twitteruser_displayname.py  0003_auto_20200831_2305.py  0004_remove_twitteruser_followers.py
