[tool.poetry]
name = "twitter_clone"
version = "0.1.0"
description = "Twitter Clone"
authors = ["Ruben Espino <56930001+r-o-e-574@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.1"
django-crispy-forms = "^1.9.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
